@@ -16,10 +16,10 @@
 
 package stroom.headless;
 
-import stroom.content.ContentPack;
 import stroom.content.ContentPacks;
 import stroom.test.ContentPackDownloader;
 import stroom.test.common.ComparisonHelper;
+import stroom.test.common.util.test.FileSystemTestUtil;
 import stroom.util.io.FileUtil;
 import stroom.util.shared.Version;
 import stroom.util.zip.ZipUtil;
@@ -37,7 +37,6 @@ import java.nio.charset.Charset;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 
@@ -85,9 +84,8 @@ class TestHeadless {
         ZipUtil.zip(inputFilePath, rawInputPath);
 
         // Create config zip file
-        final Path contentPacks = tmpPath.resolve("contentPacks");
-        Files.createDirectories(contentPacks);
-        importXmlSchemas(contentPacks);
+        final Path downloadedContentPacks = FileSystemTestUtil.getContentPackDownloadsDir();
+        downloadXmlSchemas(downloadedContentPacks);
 
         // Copy required config into the temp dir.
         final Path rawConfigPath = tmpPath.resolve("config");
@@ -96,7 +94,7 @@ class TestHeadless {
         FileUtils.copyDirectory(configUnzippedDirPath.toFile(), rawConfigPath.toFile());
 
         // Unzip the downloaded content packs into the temp dir.
-        try (final DirectoryStream<Path> stream = Files.newDirectoryStream(contentPacks)) {
+        try (final DirectoryStream<Path> stream = Files.newDirectoryStream(downloadedContentPacks)) {
             stream.forEach(file -> {
                 try {
                     ZipUtil.unzip(file, rawConfigPath);
@@ -139,14 +137,10 @@ class TestHeadless {
         ComparisonHelper.compareFiles(expectedOutputFilePath, outputFilePath);
     }
 
-    private void importXmlSchemas(final Path path) {
-        importContentPacks(Arrays.asList(
-                ContentPacks.CORE_XML_SCHEMAS_PACK,
-                ContentPacks.EVENT_LOGGING_XML_SCHEMA_PACK
-        ), path);
-    }
-
-    private void importContentPacks(final List<ContentPack> packs, final Path path) {
-        packs.forEach(pack -> ContentPackDownloader.downloadContentPack(pack.getNameAsStr(), pack.getVersion(), path));
+    private void downloadXmlSchemas(final Path path) {
+        List.of(ContentPacks.CORE_XML_SCHEMAS_PACK,
+                ContentPacks.EVENT_LOGGING_XML_SCHEMA_PACK)
+                .forEach(contentPack ->
+                        ContentPackDownloader.downloadContentPack(contentPack, path));
     }
 }
